--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -18,8 +18,8 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>1000</width>
-     <height>633</height>
+     <width>1102</width>
+     <height>2191</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -40,6 +40,9 @@
        <width>981</width>
        <height>601</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string/>
@@ -127,7 +130,8 @@
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(107, 35, 131);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(170, 0, 0);</string>
      </property>
      <property name="text">
       <string>SUPPRIMER</string>
@@ -210,27 +214,11 @@
     <widget class="QLineEdit" name="lineEdit">
      <property name="geometry">
       <rect>
-       <x>830</x>
-       <y>90</y>
+       <x>810</x>
+       <y>30</y>
        <width>113</width>
        <height>20</height>
       </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>790</x>
-       <y>90</y>
-       <width>47</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 0, 255);</string>
-     </property>
-     <property name="text">
-      <string>Login:</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_2">
@@ -280,230 +268,260 @@ color: rgb(247, 65, 173);</string>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>270</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>201</y>
+       <width>24</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>NOM</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_nom</cstring>
+     </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_nom">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>270</y>
-       <width>161</width>
-       <height>20</height>
+       <x>342</x>
+       <y>201</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>300</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>224</y>
+       <width>43</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>PRENOM</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_prenom</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>330</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>248</y>
+       <width>19</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>CIN</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_cin</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>360</y>
-       <width>61</width>
-       <height>21</height>
+       <x>281</x>
+       <y>310</y>
+       <width>55</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>DATE NAIS</string>
      </property>
+     <property name="buddy">
+      <cstring>dateEdit_nais</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>390</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>340</y>
+       <width>19</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>TEL</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_tel</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_10">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>420</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>400</y>
+       <width>25</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>MAIL</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_mail</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>450</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>430</y>
+       <width>42</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>SALAIRE</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_salaire</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_fonction">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>480</y>
-       <width>101</width>
-       <height>21</height>
+       <x>281</x>
+       <y>460</y>
+       <width>54</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>FONCTION</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_revenue</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>600</x>
-       <y>330</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>280</y>
+       <width>25</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>SEXE</string>
      </property>
+     <property name="buddy">
+      <cstring>radioButton</cstring>
+     </property>
     </widget>
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>590</x>
-       <y>390</y>
-       <width>51</width>
-       <height>21</height>
+       <x>281</x>
+       <y>370</y>
+       <width>46</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>ADRESSE</string>
      </property>
+     <property name="buddy">
+      <cstring>lineEdit_adresse</cstring>
+     </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_prenom">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>300</y>
-       <width>161</width>
-       <height>20</height>
+       <x>342</x>
+       <y>224</y>
+       <width>291</width>
+       <height>18</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_cin">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>330</y>
-       <width>161</width>
-       <height>20</height>
+       <x>342</x>
+       <y>248</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_tel">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>390</y>
-       <width>161</width>
-       <height>20</height>
+       <x>342</x>
+       <y>340</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_mail">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>420</y>
-       <width>161</width>
-       <height>20</height>
+       <x>342</x>
+       <y>400</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_salaire">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>450</y>
-       <width>121</width>
-       <height>20</height>
+       <x>342</x>
+       <y>430</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_revenue">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>480</y>
-       <width>121</width>
-       <height>20</height>
+       <x>342</x>
+       <y>460</y>
+       <width>291</width>
+       <height>18</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_adresse">
      <property name="geometry">
       <rect>
-       <x>550</x>
-       <y>420</y>
-       <width>131</width>
-       <height>20</height>
+       <x>342</x>
+       <y>370</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QDateEdit" name="dateEdit_nais">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>360</y>
-       <width>161</width>
-       <height>22</height>
+       <x>342</x>
+       <y>310</y>
+       <width>291</width>
+       <height>17</height>
       </rect>
      </property>
     </widget>
     <widget class="QRadioButton" name="radioButton">
      <property name="geometry">
       <rect>
-       <x>550</x>
-       <y>360</y>
-       <width>61</width>
-       <height>18</height>
+       <x>342</x>
+       <y>280</y>
+       <width>328</width>
+       <height>17</height>
       </rect>
      </property>
      <property name="text">
@@ -513,10 +531,10 @@ color: rgb(247, 65, 173);</string>
     <widget class="QRadioButton" name="radioButton_2">
      <property name="geometry">
       <rect>
-       <x>630</x>
-       <y>360</y>
-       <width>61</width>
-       <height>18</height>
+       <x>500</x>
+       <y>280</y>
+       <width>111</width>
+       <height>17</height>
       </rect>
      </property>
      <property name="text">
@@ -526,8 +544,8 @@ color: rgb(247, 65, 173);</string>
     <widget class="QOpenGLWidget" name="openGLWidget">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>200</y>
+       <x>710</x>
+       <y>140</y>
        <width>61</width>
        <height>61</height>
       </rect>
@@ -539,8 +557,8 @@ color: rgb(247, 65, 173);</string>
     <widget class="QPushButton" name="pushButton_valider">
      <property name="geometry">
       <rect>
-       <x>560</x>
-       <y>480</y>
+       <x>570</x>
+       <y>500</y>
        <width>121</width>
        <height>31</height>
       </rect>
@@ -549,8 +567,8 @@ color: rgb(247, 65, 173);</string>
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(107, 35, 131);
-background-color: rgb(107, 35, 131);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 170, 0);</string>
      </property>
      <property name="text">
       <string>VALIDER</string>
@@ -575,6 +593,26 @@ background-color: rgb(107, 35, 131);</string>
       </rect>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>809</x>
+       <y>80</y>
+       <width>111</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(107, 35, 131);
+color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>Deconnection</string>
+     </property>
+    </widget>
     <zorder>tableView</zorder>
     <zorder>label</zorder>
     <zorder>pushButton_afficher</zorder>
@@ -584,7 +622,6 @@ background-color: rgb(107, 35, 131);</string>
     <zorder>pushButton_modifier</zorder>
     <zorder>pushButton_pdf</zorder>
     <zorder>comboBox</zorder>
-    <zorder>label_2</zorder>
     <zorder>lineEdit</zorder>
     <zorder>lineEdit_2</zorder>
     <zorder>label_3</zorder>
@@ -612,6 +649,7 @@ background-color: rgb(107, 35, 131);</string>
     <zorder>radioButton_2</zorder>
     <zorder>openGLWidget</zorder>
     <zorder>pushButton_valider</zorder>
+    <zorder>pushButton</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
