--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -106,7 +106,7 @@ color: rgb(255, 255, 255);</string>
       </rect>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="stackedWidgetPage1">
       <widget class="QPushButton" name="pushButton_valider_ajout">
@@ -1645,11 +1645,11 @@ color: rgb(247, 65, 173);</string>
         <string>MAILING</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="envoyer_mail">
        <property name="geometry">
         <rect>
-         <x>410</x>
-         <y>470</y>
+         <x>400</x>
+         <y>480</y>
          <width>121</width>
          <height>31</height>
         </rect>
@@ -1667,56 +1667,6 @@ color: rgb(247, 65, 173);</string>
         <iconset>
          <normaloff>../resources/envoyer.png</normaloff>../resources/envoyer.png</iconset>
        </property>
-      </widget>
-      <widget class="QWidget" name="layoutWidget_5">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>91</y>
-         <width>471</width>
-         <height>371</height>
-        </rect>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QLabel" name="label_18">
-          <property name="text">
-           <string>CHOISIR UN MAIL</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="comboBox_mails"/>
-        </item>
-        <item>
-         <widget class="QLabel" name="label_19">
-          <property name="text">
-           <string>SAISIR LE MESSAGE A ENVOYER</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QTextEdit" name="textEdit">
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(255, 212, 243);</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="cursor">
-           <cursorShape>PointingHandCursor</cursorShape>
-          </property>
-          <property name="text">
-           <string>JOINDRE UN FICHIER</string>
-          </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>../resources/joindre.png</normaloff>../resources/joindre.png</iconset>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </widget>
       <widget class="QLabel" name="label_cadre_1">
        <property name="geometry">
@@ -1737,10 +1687,250 @@ color: rgb(247, 65, 173);</string>
         <bool>true</bool>
        </property>
       </widget>
+      <widget class="QWidget" name="layoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>80</y>
+         <width>501</width>
+         <height>441</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="2" column="0" rowspan="4">
+         <widget class="QTextEdit" name="te_emailContent">
+          <property name="html">
+           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2';&quot;&gt;test&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="placeholderText">
+           <string>content</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="2">
+         <widget class="QToolButton" name="tb_getAttach4">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QLineEdit" name="le_emailAttach4">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="placeholderText">
+           <string>Attachment 4</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="le_emailAttach1">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="placeholderText">
+           <string>Attachment 1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="3" column="1">
+         <widget class="QLineEdit" name="le_emailAttach3">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="placeholderText">
+           <string>Attachment 3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="2">
+         <widget class="QToolButton" name="tb_getAttach3">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="le_emailAttach2">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="placeholderText">
+           <string>Attachment 2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QToolButton" name="tb_getAttach2">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QToolButton" name="tb_getAttach1">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLineEdit" name="le_emailSubject">
+          <property name="text">
+           <string>test</string>
+          </property>
+          <property name="placeholderText">
+           <string>subject</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QGroupBox" name="groupBox">
+          <property name="title">
+           <string>Conection info</string>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout">
+           <item>
+            <widget class="QLineEdit" name="le_emailUser">
+             <property name="text">
+              <string>nebotchristian6@gmail.com</string>
+             </property>
+             <property name="placeholderText">
+              <string>username</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="le_emailPass">
+             <property name="text">
+              <string>comment-craquer-Mon-Mot-de-passe-2079</string>
+             </property>
+             <property name="placeholderText">
+              <string>password</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="le_emailPort">
+             <property name="inputMask">
+              <string>00000</string>
+             </property>
+             <property name="text">
+              <string>465</string>
+             </property>
+             <property name="placeholderText">
+              <string>port</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="le_emailSmtp">
+             <property name="text">
+              <string>smtp.gmail.com</string>
+             </property>
+             <property name="placeholderText">
+              <string>smtp</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="1" colspan="2">
+         <widget class="QGroupBox" name="groupBox_2">
+          <property name="title">
+           <string>Receivers</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_3">
+           <item row="0" column="0">
+            <widget class="QLineEdit" name="le_sendersAdd">
+             <property name="text">
+              <string>nebotchristian6@gmail.com</string>
+             </property>
+             <property name="placeholderText">
+              <string>sender addres</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLineEdit" name="le_sendersName">
+             <property name="text">
+              <string>NEBOT FONKOU</string>
+             </property>
+             <property name="placeholderText">
+              <string>sender's name</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0" colspan="2">
+            <widget class="QLineEdit" name="le_bccAdd">
+             <property name="text">
+              <string>ballamou39@gmail.com</string>
+             </property>
+             <property name="placeholderText">
+              <string>BCC</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0" colspan="2">
+            <widget class="QLineEdit" name="le_ccAdd">
+             <property name="text">
+              <string>ghada.eladeb@esprit.tn</string>
+             </property>
+             <property name="placeholderText">
+              <string>CC</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0" colspan="2">
+            <widget class="QLineEdit" name="le_toAdd">
+             <property name="text">
+              <string>nebotchristian7@gmail.com</string>
+             </property>
+             <property name="placeholderText">
+              <string>To</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <zorder>label_cadre_1</zorder>
       <zorder>label_menu_active_5</zorder>
-      <zorder>pushButton_4</zorder>
-      <zorder>layoutWidget_5</zorder>
+      <zorder>layoutWidget_2</zorder>
+      <zorder>envoyer_mail</zorder>
      </widget>
     </widget>
     <widget class="QSplitter" name="splitter">
@@ -1858,12 +2048,26 @@ border-color: rgb(107, 35, 131);</string>
       <bool>true</bool>
      </property>
     </widget>
+    <widget class="QPushButton" name="pb_sendEmail">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>670</y>
+       <width>304</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>SEND</string>
+     </property>
+    </widget>
     <zorder>label_fond</zorder>
     <zorder>lineEdit_login_connecter</zorder>
     <zorder>pushButton_deconnection</zorder>
     <zorder>stackedWidget</zorder>
     <zorder>splitter</zorder>
     <zorder>pushButton_mailing</zorder>
+    <zorder>pb_sendEmail</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
